--- a/member/src/main/webapp/WEB-INF/web.xml
+++ b/member/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,7 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml
 						/WEB-INF/spring/spring-security.xml
+						/WEB-INF/spring/spring-socket.xml
 			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
