--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,4 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/eclipse,java,maven
+*.log
