--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /.metadata/
+.metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
+.metadata/.plugins/org.eclipse.wst.server.core/publish/publish0.dat
