--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,4 @@ buildNumber.properties
 *.log
 Servers2/.project
 Servers/.project
+.metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
