--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ buildNumber.properties
 Servers2/.project
 Servers/.project
 .metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
+.metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
