--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,4 @@ Servers2/.project
 Servers/.project
 .metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
 .metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
+.metadata/.plugins/org.eclipse.wst.server.core/publish/publish0.dat
