--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,4 @@ Servers/.project
 .metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
 .metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
 .metadata/.plugins/org.eclipse.wst.server.core/publish/publish0.dat
+WithEarth-Donation/target/m2e-wtp/web-resources/META-INF/maven/com.aia/dona/pom.properties
