--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ member/.settings/org.eclipse.jst.j2ee.ejb.annotations.xdoclet.prefs
 # Edit at https://www.toptal.com/developers/gitignore?templates=eclipse,java,maven
 
 ### Eclipse ###
+target/
+.settings/
 servers/
 server/
 .metadata
