--- a/Community/src/main/webapp/WEB-INF/web.xml
+++ b/Community/src/main/webapp/WEB-INF/web.xml
@@ -44,5 +44,10 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<session-config>
+    	<session-timeout>600</session-timeout>
+   	 	<tracking-mode>COOKIE</tracking-mode>
+	</session-config>
 
 </web-app>
