--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,5 @@ member/.settings/org.eclipse.wst.ws.service.policy.prefs
 WithEarth-Point/target/m2e-wtp/web-resources/META-INF/maven/com.aia/dona/pom.properties
 member/target/m2e-wtp/web-resources/META-INF/maven/com.withearth/member/pom.properties
 
+member/target/m2e-wtp/web-resources/META-INF/maven/com.withearth/member/pom.properties
+member/target/m2e-wtp/web-resources/META-INF/maven/com.withearth/member/pom.properties
