--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,4 @@ member/target/m2e-wtp/web-resources/META-INF/maven/com.withearth/member/pom.prop
 
 member/target/m2e-wtp/web-resources/META-INF/maven/com.withearth/member/pom.properties
 member/target/m2e-wtp/web-resources/META-INF/maven/com.withearth/member/pom.properties
+member/target/m2e-wtp/web-resources/META-INF/maven/com.withearth/member/pom.properties
